--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.1",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.3.3",
@@ -15,6 +16,7 @@
   "dependencies": {
     "apollo-server-express": "^2.9.3",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "graphql": "^14.5.6",
