--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "graphql": "^14.5.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "typescript": "3.6.3"
   },
@@ -39,9 +40,10 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.7.0",
-    "@types/graphql": "^14.5.0",
     "@graphql-codegen/typescript": "1.7.0",
     "@graphql-codegen/typescript-operations": "1.7.0",
-    "@graphql-codegen/typescript-react-apollo": "1.7.0"
+    "@graphql-codegen/typescript-react-apollo": "1.7.0",
+    "@types/graphql": "^14.5.0",
+    "@types/react-router-dom": "^4.3.5"
   }
 }
