--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.3.3",
@@ -17,6 +18,7 @@
     "apollo-server-express": "^2.9.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "graphql": "^14.5.6",
