--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,9 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "apollo-boost": "^0.4.4",
+    "apollo-link-token-refresh": "^0.2.6",
     "graphql": "^14.5.6",
+    "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
@@ -44,6 +46,7 @@
     "@graphql-codegen/typescript-operations": "1.7.0",
     "@graphql-codegen/typescript-react-apollo": "1.7.0",
     "@types/graphql": "^14.5.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react-router-dom": "^4.3.5"
   }
 }
