--- a/web/package.json
+++ b/web/package.json
@@ -3,20 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.1",
+    "@apollo/client": "^3.4.10",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
-    "apollo-boost": "^0.4.4",
-    "apollo-link-token-refresh": "^0.2.6",
     "graphql": "^14.5.6",
-    "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "typescript": "3.6.3"
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
